; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ipa-inline.c_cgraph_maybe_hot_edge_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ipa-inline.c_cgraph_maybe_hot_edge_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.cgraph_edge = type { i32 }

@profile_info = common dso_local global %struct.TYPE_2__* null, align 8
@flag_branch_probabilities = common dso_local global i64 0, align 8
@HOT_BB_COUNT_FRACTION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cgraph_edge*)* @cgraph_maybe_hot_edge_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cgraph_maybe_hot_edge_p(%struct.cgraph_edge* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cgraph_edge*, align 8
  store %struct.cgraph_edge* %0, %struct.cgraph_edge** %3, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @profile_info, align 8
  %5 = icmp ne %struct.TYPE_2__* %4, null
  br i1 %5, label %6, label %21

6:                                                ; preds = %1
  %7 = load i64, i64* @flag_branch_probabilities, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %6
  %10 = load %struct.cgraph_edge*, %struct.cgraph_edge** %3, align 8
  %11 = getelementptr inbounds %struct.cgraph_edge, %struct.cgraph_edge* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @profile_info, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @HOT_BB_COUNT_FRACTION, align 4
  %17 = call i32 @PARAM_VALUE(i32 %16)
  %18 = sdiv i32 %15, %17
  %19 = icmp sle i32 %12, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %22

21:                                               ; preds = %9, %6, %1
  store i32 1, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %20
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @PARAM_VALUE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
